Starting to add scratch the correct way. Adding a transformation to rewrite trees with accesses to scratch space. This will want changing so that we pass in a transformer rather than a series of flags at the end. Adding scratch state to the model. Changes that are only related to the addition of inner classes to hold the state. More adding state Updates to state location Adding state and scratch classes